tests/baselines/reference/parserRealSource3.errors.txt
parserRealSource3.ts(4,21): error TS6053: File 'typescript.ts' not found.


==== parserRealSource3.ts (1 errors) ====
    // Copyright (c) Microsoft. All rights reserved. Licensed under the Apache License, Version 2.0. 
    // See LICENSE.txt in the project root for complete license information.
    
    ///<reference path='typescript.ts' />
                        ~~~~~~~~~~~~~
!!! error TS6053: File 'typescript.ts' not found.
    
    module TypeScript {
        // Note: Any addition to the NodeType should also be supported with addition to AstWalkerDetailCallback
        export enum NodeType {
            None,
            Empty,
            EmptyExpr,
            True,
            False,
            This,
            Super,
            QString,
            Regex,
            Null,
            ArrayLit,
            ObjectLit,
            Void,
            Comma,
            Pos,
            Neg,
            Delete,
            Await,
            In,
            Dot,
            From,
            Is,
            InstOf,
            Typeof,
            NumberLit,
            Name,
            TypeRef,
            Index,
            Call,
            New,
            Asg,
            AsgAdd,
            AsgSub,
            AsgDiv,
            AsgMul,
            AsgMod,
            AsgAnd,
            AsgXor,
            AsgOr,
            AsgLsh,
            AsgRsh,
            AsgRs2,
            ConditionalExpression,
            LogOr,
            LogAnd,
            Or,
            Xor,
            And,
            Eq,
            Ne,
            Eqv,
            NEqv,
            Lt,
            Le,
            Gt,
            Ge,
            Add,
            Sub,
            Mul,
            Div,
            Mod,
            Lsh,
            Rsh,
            Rs2,
            Not,
            LogNot,
            IncPre,
            DecPre,
            IncPost,
            DecPost,
            TypeAssertion,
            FuncDecl,
            Member,
            VarDecl,
            ArgDecl,
            Return,
            Break,
            Continue,
            Throw,
            For,
            ForIn,
            If,
            While,
            DoWhile,
            Block,
            Case,
            Switch,
            Try,
            TryCatch,
            TryFinally,
            Finally,
            Catch,
            List,
            Script,
            ClassDeclaration,
            InterfaceDeclaration,
            ModuleDeclaration,
            ImportDeclaration,
            With,
            Label,
            LabeledStatement,
            EBStart,
            GotoEB,
            EndCode,
            Error,
            Comment,
            Debugger,
            GeneralNode = FuncDecl,
            LastAsg = AsgRs2,
        }
    }